[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "landlock"
authors = [{name = "Edward Knight", email = "edw@rdknig.ht"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Operating System Kernels :: Linux",
]
dynamic = ["version", "description"]

[project.urls]
Home = "https://github.com/Edward-Knight/landlock"

[tool.isort]
profile = "black"
